--- a/medcab9/package.json
+++ b/medcab9/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "formik": "^2.1.4",
+    "google-font-installer": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
