--- a/medcab9/package.json
+++ b/medcab9/package.json
@@ -14,6 +14,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
